# servicebot

./: .env.sample  Cargo.toml  docker-compose.yml
scripts/: init.js
src/: clients.rs  db.rs  errors.rs  main.rs  model.rs
src/actor/: mod.rs  telegram.rs  telegram_receiver.rs  telegram_sender.rs
src/controllers/: mod.rs  push_event.rs
