[package]
name = "servicebot"
version = "0.1.0"
authors = ["Elang87 <ernesto@wondersauce.com>"]
edition = "2018"

[dependencies]
actix = "*"
actix-web = "1.0.0-beta.3"
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.13.0"
failure = "0.1.2"
futures = "0.1"
mongodb = "0.3.11"
serde_derive = "1.0.79"
serde_json = "1.0"
serde = "1.0"
slack = "*"
uuid = { version = "0.6.5", features = ["serde", "v4"] }